fixed mobile view overflow

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap");
 
+:root {
+  --bcg-primary: hsl(276, 91%, 38%);
+  --clr-primary: hsl(52, 99%, 62%);
+  --clr-secondary: hsl(333, 93%, 56%);
+}
+
 *,
 *::before,
 *::after {
@@ -10,11 +16,11 @@
 
 body {
   height: 100vh;
-  background-color: #1e2a78;
+  background-color: var(--bcg-primary);
   font-family: "Montserrat", sans-serif;
   display: grid;
   place-items: center;
-  color: hsl(120, 100%, 95%);
+  color: var(--clr-primary);
 }
 
 .header {
@@ -35,13 +41,16 @@ body {
   font-size: clamp(1.5rem, 3.5vw, 2rem);
 }
 .blue-bold-text {
-  color: hsl(176, 100%, 50%);
+  color: var(--clr-secondary);
   font-weight: bold;
 }
 
 .word-letter-container {
+  width: 100vw;
   display: flex;
   column-gap: 1em;
+  justify-content: center;
+  flex-direction: row;
 }
 
 .word-letter {
@@ -58,7 +67,7 @@ body {
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: hsl(176, 100%, 50%);
+  background-color: var(--clr-secondary);
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -88,7 +97,7 @@ body {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   font-weight: bold;
-  background-color: hsl(191, 100%, 50%);
+  background-color: var(--clr-secondary);
   display: grid;
   place-items: center;
   font-size: clamp(1.2rem, 3vw, 2rem);
@@ -100,23 +109,23 @@ body {
 }
 
 .letter:hover {
-  background-color: hsl(191, 91%, 44%);
+  background-color: hsl(333, 73%, 50%);
 }
 
 .correct {
   color: hsl(112, 100%, 50%);
-  background-color: hsl(191, 72%, 49%);
+  background-color: hsl(333, 73%, 50%);
   pointer-events: none;
 }
 .wrong {
   color: hsl(0, 100%, 50%);
-  background-color: hsl(191, 72%, 49%);
+  background-color: hsl(333, 73%, 50%);
   pointer-events: none;
 }
 
 .reset-btn {
   color: #fff;
-  background-color: hsl(191, 100%, 50%);
+  background-color: hsl(333, 93%, 56%);
   padding: 0.3em 0.7em;
   font-size: clamp(1.2rem, 3vw, 1.8rem);
   border: none;
@@ -133,7 +142,7 @@ body {
   -o-transition: background-color 0.3s ease-in-out;
 }
 .reset-btn:hover {
-  background-color: hsl(191, 91%, 44%);
+  background-color: hsl(333, 73%, 50%);
 }
 
 @media screen and (min-width: 1300px) {
